fix alignment mobile input

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -155,6 +155,18 @@ div.modal-dialog {
   right: 11px;
   bottom: 13px;
 }
+.phone-input .caret {
+  bottom: 14px;
+}
+
+.phone-input .btn {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding-left: 10px;
+  padding-right: 21px;
+
+}
 
 .btn-select-item {
   width: 40%;
